--- a/styles.css
+++ b/styles.css
@@ -39,15 +39,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Fix for H1UserAgentFontSizeInSection deprecation warning */
-:where(h1) {
-    margin-block: 0.67em;
-    font-size: 2em;
-    font-weight: 700;
-}
-
 h1 {
-    font-size: clamp(2.5rem, 5vw, 4rem);
+    font-size: clamp(2.5rem, 5vw, 4rem) !important;
     font-weight: 700;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    display: block;
 }
 
 h2 {
