--- a/styles.css
+++ b/styles.css
@@ -38,14 +38,14 @@ h1, h2, h3, h4, h5, h6 {
     color: #ffffff;
 }
 
-/* Fix for H1UserAgentFontSizeInSection deprecation warning */
+/* Fix for H1UserAgentFontSizeInSection deprecation warning - Updated to modern CSS */
 h1 {
     font-size: clamp(2.5rem, 5vw, 4rem) !important;
     font-weight: 700;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
     display: block;
 }
 
